<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/dialog_background">

        <RelativeLayout
            android:layout_alignParentLeft="true"
            android:id="@+id/relative_dialog"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/complete_profile_label"
                android:text="@string/infoCompletProfile"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentTop="true"/>

            <RelativeLayout
                android:id="@+id/userInfo_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/complete_profile_label"
                android:layout_marginTop="15dp">

                <RelativeLayout
                    android:id="@+id/email_relative_completed"
                    android:layout_alignParentTop="true"
                    style="@style/signInRelative">

                    <TextView
                        android:id="@+id/email_label_completed"
                        android:text="@string/user"
                        android:textAlignment="center"
                        style="@style/signInLabel"/>

                    <EditText
                        android:id="@+id/email_profile_completed"
                        android:inputType="textEmailAddress"
                        android:hint="@string/emailSignIn"
                        android:textAlignment="center"
                        android:nextFocusUp="@id/email_profile_completed"
                        android:nextFocusLeft="@id/email_profile_completed"
                        style="@style/signInEdit"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/phone_relative_completed"
                    android:layout_below="@id/email_relative_completed"
                    style="@style/signInRelative">

                    <TextView
                        android:id="@+id/phone_label_completed"
                        android:text="@string/phone"
                        android:textAlignment="center"
                        style="@style/signInLabel"/>

                    <EditText
                        android:id="@+id/phone_profile_completed"
                        android:inputType="phone"
                        android:hint="@string/phoneSignIn"
                        android:textAlignment="center"
                        android:nextFocusUp="@id/phone_profile_completed"
                        android:nextFocusLeft="@id/phone_profile_completed"
                        style="@style/signInEdit"/>
                </RelativeLayout>

                <Button
                    android:id="@+id/button_completed_profile"
                    android:layout_below="@id/phone_relative_completed"
                    android:layout_marginTop="15dp"
                    android:text="@string/done"
                    android:enabled="false"
                    android:clickable="false"
                    style="@style/signInDone"/>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>