<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.natter.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/sfondo_login">

    <!-- contenitore edit -->
    <RelativeLayout
        android:id="@+id/sfondoEdit"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bordo_login">
        <!-- username -->

        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/user"
            android:nextFocusUp="@id/email"
            android:nextFocusLeft="@id/email"
            style="@style/logInEdit"/>
        <View
            android:id="@+id/riga"
            android:layout_below="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#8F8F8F"/>
        <!-- password -->
        <EditText
            android:id="@+id/password"
            android:layout_below="@+id/riga"
            android:inputType="textPassword"
            android:hint="@string/passwd"
            android:nextFocusUp="@id/password"
            android:nextFocusLeft="@id/password"
            style="@style/logInEdit"/>
    </RelativeLayout>
    <!-- fine -->

    <!-- tasto login -->
    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#40FFFFFF"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:background="@drawable/bottone_login"
        android:text="@string/login"
        android:layout_below="@id/sfondoEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="false"
        android:clickable="false"
        android:onClick="login"/>

    <!-- logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/sfondoEdit"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:padding="12dp"
        android:src="@drawable/natter"
        android:contentDescription="@string/desc"/>

    <!-- signUp -->
    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="italic"
        android:text="@string/signUp"
        android:clickable="true"
        android:layout_marginBottom="45dp"
        android:onClick="signUp"/>

</RelativeLayout>
