<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_profile">

    <RelativeLayout
        android:id="@+id/profilo_sx"
        android:layout_width="110dp"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true">

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/profile"/>

        <Button
            android:id="@+id/profile_button"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/profile_img"
            android:text="@string/edit"
            android:contentDescription="edit"
            style="@style/signInDone"/>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/logout"
            android:contentDescription="logout"
            style="@style/signInDone"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#BB000000"
        android:layout_toRightOf="@id/profilo_sx">

        <RelativeLayout
            android:id="@+id/info_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp">

            <TextView
                android:id="@+id/nome_profile"
                style="@style/profileInfo"
                android:text="Francesco Nobilia"/>

            <TextView
                android:id="@+id/email_profile"
                android:layout_below="@id/nome_profile"
                style="@style/profileInfo"
                android:text="f.nobilia@gmail.com"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/phone_profile"
                android:layout_below="@id/email_profile"
                style="@style/profileInfo"
                android:text="+39 3476117282"
                android:layout_marginTop="30dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/info_profile"
            android:layout_alignStart="@id/info_profile"
            android:visibility="invisible">

            <EditText
                android:id="@+id/edit_email_profile"
                style="@style/profileEdit"
                android:inputType="textEmailAddress"
                android:hint="Your new email"/>/>

            <EditText
                android:id="@+id/edit_phone_profile"
                android:layout_below="@id/edit_email_profile"
                style="@style/profileEdit"
                android:inputType="phone"
                android:hint="New mobile phone number"/>

            <EditText
                android:id="@+id/edit_passwd_profile"
                android:layout_below="@id/edit_phone_profile"
                style="@style/profileEdit"
                android:inputType="textVisiblePassword"
                android:hint="Your new password"/>/>

            <Button
                android:id="@+id/done_profile"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:layout_below="@id/edit_passwd_profile"
                android:text="@string/done"
                android:enabled="false"
                style="@style/signInDone"/>
        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
